client/src/index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --fw-regular: 400;
  --fw-medium: 500;
  --fw-semiBold: 600;
  --fw-bold: 700;
}

/************** Typography **************/
@font-face {
  font-family: 'Barlow';
  src: url('/fonts/Barlow/Barlow-Regular.eot');
  src: url('/fonts/Barlow/Barlow-Regular.eot?#iefix')
      format('embedded-opentype'),
    url('/fonts/Barlow/Barlow-Regular.woff2') format('woff2'),
    url('/fonts/Barlow/Barlow-Regular.woff') format('woff'),
    url('/fonts/Barlow/Barlow-Regular.ttf') format('truetype'),
    url('/fonts/Barlow/Barlow-Regular.svg#Barlow-Regular') format('svg');
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Barlow';
  src: url('/fonts/Barlow/Barlow-Medium.eot');
  src: url('/fonts/Barlow/Barlow-Medium.eot?#iefix') format('embedded-opentype'),
    url('/fonts/Barlow/Barlow-Medium.woff2') format('woff2'),
    url('/fonts/Barlow/Barlow-Medium.woff') format('woff'),
    url('/fonts/Barlow/Barlow-Medium.ttf') format('truetype'),
    url('/fonts/Barlow/Barlow-Medium.svg#Barlow-Medium') format('svg');
  font-weight: 500;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Barlow';
  src: url('/fonts/Barlow/Barlow-SemiBold.eot');
  src: url('/fonts/Barlow/Barlow-SemiBold.eot?#iefix')
      format('embedded-opentype'),
    url('/fonts/Barlow/Barlow-SemiBold.woff2') format('woff2'),
    url('/fonts/Barlow/Barlow-SemiBold.woff') format('woff'),
    url('/fonts/Barlow/Barlow-SemiBold.ttf') format('truetype'),
    url('/fonts/Barlow/Barlow-SemiBold.svg#Barlow-SemiBold') format('svg');
  font-weight: 600;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Barlow';
  src: url('/fonts/Barlow/Barlow-Bold.eot');
  src: url('/fonts/Barlow/Barlow-Bold.eot?#iefix') format('embedded-opentype'),
    url('/fonts/Barlow/Barlow-Bold.woff2') format('woff2'),
    url('/fonts/Barlow/Barlow-Bold.woff') format('woff'),
    url('/fonts/Barlow/Barlow-Bold.ttf') format('truetype'),
    url('/fonts/Barlow/Barlow-Bold.svg#Barlow-Bold') format('svg');
  font-weight: 700;
  font-style: normal;
  font-display: swap;
}

body {
  width: 100vw;
  height: 100vh;
  /* overflow: hidden; */
  font-family: 'Barlow', serif;
}

#root {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
}

header {
  padding: 1rem;
  box-shadow: rgba(165, 173, 179, 0.4) 1px 1px 6px 0px;
}

.logo {
  font-size: 1.75rem;
  font-weight: bold;
}

.logo span {
  color: #32a89d;
}

main {
  flex: 1;
  overflow: auto;
  display: flex;
  flex-direction: row;
}

main > .panel {
  flex: 1;
  display: flex;
  flex-direction: column;
  position: relative;
  transition: 800ms ease;
}

.panel.hide {
  transform: translateX(-100%);
}

.panel .selected-school {
  background-color: #ffffff;
  position: absolute;
  top: 0;
  left: 100%;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: opacity 800ms ease;
  padding: 1rem;
}

.panel .selected-school.show {
  opacity: 1;
}

.panel .selected-school .links {
  width: 100%;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 10px;
}

.panel .selected-school .links a {
  display: block;
  width: fit-content;
  transition: scale 300ms ease;
}

.panel .selected-school .links a:hover {
  scale: 1.12;
}

.panel .selected-school .links img {
  width: 45px;
  aspect-ratio: 1;
}

.panel-control {
  padding: 1rem;
}

input#search {
  font-size: 1rem;
  padding: 0.5rem 0.7rem;
  border: 0;
  border-radius: 50em;
  box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.2);
}

input#search ::placeholder {
  color: #000;
  opacity: 1;
}

.panel > .panel-data {
  flex: 1;
  overflow: scroll;
}

.panel-data li {
  padding: 1rem;
}

.panel-data li:nth-child(2n) {
  background-color: #eee;
}

.panel-data li:hover {
  background: #ccc;
  cursor: pointer;
}

main > .map {
  flex: 2;
}

.map {
  height: 100%;
}

footer {
  background-color: #000;
  color: #fff;
  padding: 1rem;
  text-align: center;
}

